Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
None
Description
Since MDEV-23855 InnoDB can do checkpoints much more rarely. This improves performance under write-heavy load, but makes mariadb-backup create huge incremental backups (since the last checkpoint).
One way to solve it would be to let mariadb-backup to force an InnoDB checkpoint before a backup. There are many ways of doing it, innodb.page_cleaner test shows one of them, marko knows more. Perhaps it should be optional, but, likely, enabled by default.
Alternatively, InnoDB can force a checkpoint automatically when entering a certain backup stage.
Attachments
Issue Links
- causes
-
MDEV-36871 mariadb-backup incremental segfault querying mariadb_backup_history
-
- Closed
-
- relates to
-
MDEV-24537 innodb_max_dirty_pages_pct_lwm=0 lost its special meaning
-
- Closed
-
-
MDEV-24949 Enabling idle flushing (possible regression from MDEV-23855)
-
- Closed
-
-
MDEV-26626 InnoDB fails to advance the log checkpoint
-
- Closed
-
-
MDEV-29208 ALTER TABLE…IMPORT TABLESPACE is not crash safe
-
- Stalled
-
-
MDEV-34062 mariadb-backup --backup is extremely slow at copying ib_logfile0
-
- Closed
-
-
MDEV-31410 mariadb-backup prepare crash with InnoDB: Missing FILE_CREATE, FILE_DELETE or FILE_MODIFY before FILE_CHECKPOINT
-
- Closed
-
-
MDEV-31446 mariabackup loop on Read redo log up to LSN
-
- Open
-
-
MDEV-33838 Data still present in backup / on disk after table delete or/and import from sql
-
- Open
-
-
MDEV-35298 Issues with --extra-lsndir in MariaDB Incremental Backups Not Updating LSN as Expected
-
- Open
-
-
MDEV-35791 mariadb-backup 10.11.10 failed to create backup
-
- Closed
-
-
MDEV-36159 mariabackup failed after upgrade 10.11.10
-
- Closed
-
-
MDEV-36237 mariabackup fails with 'try increasing innodb_log_file_size'
-
- Needs Feedback
-
-
MDEV-36254 Document MDEV-30000: make mariadb-backup force an innodb checkpoint
-
- Open
-
-
MDEV-36270 mariabackup.incremental_compressed fails in 10.11+
-
- Closed
-
-
MDEV-37176 Provide description for new parameters, innodb_buffer_pool_size_auto_min, innodb_buffer_pool_size_max, innodb_log_checkpoint_now
-
- Open
-
- links to