WIP MDEV-30000: Trigger InnoDB checkpoint on backup

xtrabackup_backup_func(): Try to get InnoDB to flush the buffer pool
and wait for up to 15 seconds for it to take effect. This will reduce
the amount of log that will need to be processed both during --backup
and --prepare.

FIXME: If the connection between backup and the server is severed,
the 70100 handler will not run and the global variables will not be
restored.

FIXME: What to do if InnoDB is not enabled?

FIXME: Add a configuration parameter to enable this functionality
and to specify a timeout. Add some diagnostic output.